--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -20,6 +20,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694733.md#1" target="_blank">抵抗外国干预 澳洲将成立特别情报工作组</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7f9c589924aeb0d74cb3955a3cde7b44-150x120.jpg" align ="left"></a>为应对前所未有的外国干预和间谍活动对国家安全的威胁，澳洲将成立一个由澳洲安全情报局（ASIO）、澳洲信号局（ASD）和国防情报机构负责的精英情报特别工作组。这将使澳洲处于虚拟战争状态。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 5:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11692914.md#1" target="_blank">向心为何接触宫庙地产 专家：统战切入点</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11692914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dddfc73fed4622988dc481ba6d33afbb-150x120.jpg" align ="left"></a>牵涉共谍案的向心与龚青夫妇已遭到限制出境，据台湾媒体日前的报导，向心与龚青近年频繁到台湾，向心青睐与台湾的地产界人士和特异功能人士接触。专家分析，特异功能人士多在台湾的宫庙里，因此恐与中共渗透台湾宫庙有关系，而台湾的建商多有较好的政商关系，这点可能也是向心与他们接触的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694230.md#1" target="_blank">佛山省级示范屠宰场偷卖死猪 日达数千斤</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1145130224-1-150x120.jpg" align ="left"></a>中国非洲猪瘟肆虐，猪肉价格飞涨之际，有大陆记者暗访发现，广东佛山一官方认证屠宰场，竟然在处理后的病死猪身上盖检疫合格章，并运往佛山、广州等地销售，每天达数千斤之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 1:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703047.md#1" target="_blank">江苏男子掐死8岁亲生儿子 网民吁严惩</a><br></h3>大陆乱象万千。近期，江苏宿迁一名男子朱某杀害自己刚满8岁的儿子，而后却辩称儿子身体不好，帮他解脱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701612.md#1" target="_blank">被爆扫楼式筹款 “水滴筹”陷信用危机</a><br></h3>中国重病众筹平台“水滴筹”近日被曝陷入信任危机，平台审查不严格，又没有相关法律对互联网筹款平台进行监管，民众担心捐款人被消费、被欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11699885.md#1" target="_blank">地陷埋3人后 广州又一处路面发生塌陷</a><br></h3>继12月1日，广州市大道北与禺东西路交界处发生地面塌陷后，12月3日，番禺南村镇番禺大道南往北方向一处人行道上也发生地面塌陷。不过，无人员伤亡。而此前的塌陷导致3人被埋，当局直接往坑中填水泥，受害人家属连日打横幅抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:05 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/3/n11697266.md#1" target="_blank">福建少女遭霸凌 被同学脱衣服搧耳光</a><br></h3>11月24日，福建中华技师学院，15岁女生小小（化名）被同学和其他几名女生在寝室扒光上衣、疯狂扇耳光、揪头发、辱骂，并被拍下视频。警方称，因涉事女生都是未成年人，无法拘留，校方则仍未做出回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/3/n11696595.md#1" target="_blank">西安大妈趵突泉吐口水拍照 网民：没素质</a><br></h3>近日，在山东济南趵突泉景区，五位游玩的大妈，为了拍摄嘴巴喷水的一幕，集体向泉水吐口水，引来网民批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/3/n11696580.md#1" target="_blank">每日三退声明精选（2019/12/02）</a><br></h3>看了大纪元的《九评共产党》感到非常的震惊，我为党工作了一生而且大部分工作都是从事党务工作，却不知它如此的邪恶，多可悲呀！现在我醒悟了，我不能做邪教的一份子，现在我郑重声明：退出共产党、共青团和少先队等一切邪恶组织，清除兽的印记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694217.md#1" target="_blank">每日三退声明精选（2019/12/01）</a><br></h3>我没有修炼法轮大法，但看过一遍《转法轮》，知道法轮大法好，炼法轮功的人都是些好人，共产党迫害法轮功学员，打死、打残、打伤那么多好人，真是罪恶滔天。我早就不相信共产党了，它的本性就是假、恶、斗。我郑重声明：退出红小兵和少先队组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iqwytd266/djy/blob/master/gb/ncid282_2.md#1<br><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqwytd266/djy/blob/master/gb/ncid282_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_2.htm">http://www.epochtimes.com/gb/ncid282_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
