--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694728.md#1" target="_blank">荣华富贵的化身 中华螺钿漆器</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11694728.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4ea7ad154878cfa589d6e1693eaf695a-150x120.jpg" align ="left"></a>说起“螺钿漆器”让你联想到什么？自古以来，螺钿漆器就是荣华富贵的化身，是非常精致的工艺。一起来欣赏中华螺钿漆器之美。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11695375.md#1" target="_blank">下一个爱因斯坦？9岁童9个月读完大学创纪录</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11695375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/66211d032f36c9521c8e0efa0c5e89ea-150x120.jpg" align ="left"></a>在台湾9岁大的孩子还在念小3，说到大学毕业那是13年后的事情；但比利时男孩9岁的洛朗?西蒙斯（Laurent Simons）虽然也喜欢看电视、也喜欢和他的狗狗玩。不过，他即将在12月从荷兰埃因霍温科技大学毕业，有望成为世界上最年轻的毕业生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11688960.md#1" target="_blank">天地清明引(127) 明光殒－腥风血雨2</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11688960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/DiezAlbumsArmedRiders_II-150x120.jpg" align ="left"></a>沉鱼轩主所思不错。侯门果真片刻不待，血洗江湖，所到之处，望风披靡，大小门派无不俯首称降。刀器、剑器、寒锋会合一处，满身挂彩，狼狈不堪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11695531.md#1" target="_blank">许其正：笛音</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11695531.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/346078-150x120.jpg" align ="left"></a>看见林投了，就在防风林那边，成丛成堆地。  笛音便在我心中响起童年的曲调。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11695167.md#1" target="_blank">唐浩：真相终大白</a><br></h3> 暴谎迷众眼   只手妄遮天   真相一朝撼   善恶报在前......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/2/n11695166.md#1" target="_blank">唐浩：红朝恶有报</a><br></h3>赤龙祸世霾满天   妖谎名利惑凡仙   癫狂倏尽法网落   万匪惊逃惧无眠......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703794.md#1" target="_blank">台湾古典诗：中美贸易战</a><br></h3>美中贸易地雷埋，引爆工商百业乖， 升级转型风险避，全球布局展高怀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703791.md#1" target="_blank">五律：火</a><br></h3> 从命燧皇志，奋挥千载情。 阿房付尘土，赤壁助豪英。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:43 AM			</td></tr>
