--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -19,7 +19,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/24/n11677792.md#1" target="_blank">天地清明引(119) 明光殒－夜闻禁曲3</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/24/n11677792.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/001-2-150x120.jpg" align ="left"></a>义军。是日，各营部署完毕，五大派掌门齐聚中堂，禀告状况。会议中途，小兵前来通报，言飞刀门白杨有事求见刀器，十万火急。刀器道：“白杨留守飞刀门，不知发生何事。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/26/n11682780.md#1" target="_blank">诗歌：狮城掠影</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/26/n11682780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/11/311190226993-150x120.jpg" align ="left"></a> 岛国狮城新加坡 碧海椰风绿婆娑 国际繁华大都市 大纪元报处处多......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/26/n11682250.md#1" target="_blank">面临生死抉择时 他们选择了舍生取义</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/26/n11682250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/11/1511162034332775-150x120.jpg" align ="left"></a>太史公司马迁说，“人固有一死，或重于泰山，或轻于鸿毛，用之所趋异也。”古代君子认为，在面临生死选择的关键时刻，只要自己的行为符合自己的道德追求，哪怕是为了一件小事去死，即舍生取义，他们也丝毫不会犹豫。先秦时期，这样的故事非常多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 11:06 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687716.md#1" target="_blank">诗歌：感恩大法</a><br></h3>茫茫人海情缠绵，恩怨情仇迷风烟 乍惊回天梯高悬，法喜佛雨浇心田......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:39 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/26/n11682272.md#1" target="_blank">现代聊斋故事：追着她打的雷</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/26/n11682272.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/flash-731488_640-150x120.jpg" align ="left"></a>在房山看守所时，有个当地的中年妇女，大家叫她陈大姨儿，我记得好像是上访进来的。一天大家闲聊，有个女人抱怨她婆婆如何不好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 8:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687681.md#1" target="_blank">五律：钟</a><br></h3> 大音挥壮伟，高响激苍茫。 晓色敲魂梦，晚霞惊客肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/28/n11687667.md#1" target="_blank">诗歌：友聚</a><br></h3> 挚友聚一门，品茶论古今。 畅抒胸中意，俱是蓬来人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685305.md#1" target="_blank">作文选登：当我独处时</a><br></h3>独处的时光，不一定是空虚的。在独处时，也是一种放松，可以从事自己的乐趣。在这一分一秒的时间里，体会时间的可贵，也使我能在人生中，拥有片刻乐趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:29 AM			</td></tr>
