--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707671.md#1" target="_blank">郭声琨见邓炳强 中共政法委全面介入港务</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912070028101538-150x120.jpg" align ="left"></a>港人反送中运动之际，香港警队“新一哥”邓炳强到访北京后，接连受到中共公安部部长赵克志、中共政治局委员、政法委书记郭声会见。评论认为，这显示中共政法委已全面介入港务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 7:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707612.md#1" target="_blank">猞猁咬死5只鸡被打死 两甘肃男获刑惹争议</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/lynx-988882_1920-150x120.jpg" align ="left"></a>一只野生保护动物猞猁，闯入甘肃祁连山一个养殖棚咬死五只鸡。两男子将猞猁打死，近日皆被判刑、罚款，舆论哗然，有网民表示：人不如动物？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707616.md#1" target="_blank">太平洋三国出台新措施 防中共干预选举</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/20171208-yang-Sydney-opera-house-GettyImages-504950684-150x120.jpg" align ="left"></a>从台湾到新西兰再到澳大利亚，太平洋地区多个政府已经制定新的法规或成立特别工作小组，以应对在未来大选中，中共通过各种手段进行干预。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707572.md#1" target="_blank">向心三年前已被台湾当局盯上 每月赴台一次</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dddfc73fed4622988dc481ba6d33afbb-600x400-1-150x120.jpg" align ="left"></a>卷入王立强叛逃风波的香港商人向心最近被台湾当局扣留。美媒披露，实际上，三年前向心已经被台湾当局盯上，其每次赴台都被密切监视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707445.md#1" target="_blank">美参议员要求北京冬奥会执行人权保护新规</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/GettyImages-886288580-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>美国十位联邦参议员敦促国际奥委会提前实施2020奥运议程，让北京执行2022奥运《主办城市合约》的新规定，遵守人权保护的新标准。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707423.md#1" target="_blank">无处不在的人脸识别引发中国民众担忧</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140216591758-150x120.jpg" align ="left"></a>从机场安全线、超市结账台到街道摄像头，人脸识别无形中已渗透到中国民众日常生活的方方面面。本周生效的一项中共法规，更是引发民众对该技术所带来的隐私泄露的担忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707250.md#1" target="_blank">川普呼吁世界银行停止借款给中共</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/152db6d868d79eed_ttl7dayxHm_02jpg-150x120.jpg" align ="left"></a>美国总统川普（特朗普）呼吁世界银行停止向中国（中共）提供贷款。世行周四（12月5日）曾通过一项向北京提供贷款的五年计划。美国财政部长姆钦表示，美方已对当前的计划提交了反对意见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707124.md#1" target="_blank">台立委：马英九曾于总统府接见中共政协委员</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707124.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a94ba7010dab203dee4c4a003b486b01-150x120.jpg" align ="left"></a>台湾陆军退役中将罗文山涉嫌收受中共政协委员许智明政治献金，被台北地院判处2年半徒刑。立委王定宇表示，罗文山曾于2008年带着许智明等人进入总统府，其实其中有两人具中共政协委员身份。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706927.md#1" target="_blank">存违约风险 首只海航公募债宣布停牌</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706927.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1803202337372662-150x120.jpg" align ="left"></a>12月5日晚，海航集团发布公告称“09海航债”自12月6日开市起停牌，至2019年12月24日止。上海证券交易所已经批准停牌。“09海航债”是公募债，而在该债券到期前20日停牌，引发外界海航或因资金问题兑付存在不确定性猜测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:00 PM							</td></tr>
@@ -20,14 +26,8 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706089.md#1" target="_blank">留学瑞士考卷几乎全留白 李嫣自叹与数学无缘</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706089.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/VCG111117074934_meitu_1-150x120.jpg" align ="left"></a>大方自信的李嫣，因是知名歌手王菲和李亚鹏的女儿，常常成为媒体关注的焦点。13岁的她，今年9月远赴瑞士留学，入读的布索里贵族中学（College Alpin Beau Soleil）每年学费高达10.7万瑞士法郎（约合77万人民币）。她不时分享留学生活，6日在Instagram（IG）贴出疑似答案栏大多是空白的考卷，并大叹“与数学无缘”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank">中共躲在防火墙后“放炮” 瞄准香港抗议者</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/161681431-1-150x120.jpg" align ="left"></a>香港民众民主抗争至今，除了用身躯抵挡橡皮弹、催泪弹外，西方媒体最近揭露，他们还必须用智慧抵抗中共发射的网络弹。网络专家表示，中共“大炮”正试图使连登（LIHKG）网站瘫痪，但不太可能成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706190.md#1" target="_blank">【新闻看点】港警一哥赴京前喊话 民阵怒怼</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/78575841_2824595027577938_3259952848510648320_o-150x120.jpg" align ="left"></a>港警一哥临到北京前主动提到已经对民阵申请的12月8日（周日）游行发出了“不反对通知书”。说如果当天有暴力事件发生，民阵“应拿出勇气谴责”。在今天下午的记者会上，民阵召集人岑子杰对邓炳强进行了呛声。他反问“港警一哥”：“有没有勇气先谴责警暴？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706188.md#1" target="_blank">中共公安部长会港警“一哥” 泄三大信息</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706188.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191111100311100615-150x120.jpg" align ="left"></a>12月6日，中共公安部部长赵克志在北京会见了到访的香港警务处处长邓炳强。时政评论员表示，本次会面泄漏了三大秘密。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706340.md#1" target="_blank">中共惩治双重国籍？李连杰等明星被网警点名</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/M1206AL-3-150x120.jpg" align ="left"></a>近日网络疯传一段黑龙江鹤岗市网警发布的视频，强调中国不承认双重国籍，更有多个当红明星被点名。然而，“双重国籍” 在中国政商界非常普遍，官方为何此时挑起“双重国籍”问题？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706324.md#1" target="_blank">库德洛：美中正在商讨农产品购买数量</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1163406235-150x120.jpg" align ="left"></a>白宫经济顾问拉里·库德洛（Larry Kudlow）周五（12月6日）表示，美中两国正努力就北京购买美国农产品的数量达成协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706165.md#1" target="_blank">沪深两市成交量股价双跌 投资者损失惨重</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706165.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1601260306081664-150x120.jpg" align ="left"></a>中国经济前景黯淡，A股市场沪深两市的成交量和股价均呈跌势，上市公司业绩不佳，很多公司无法依靠主营业务达到业绩，投资者对A股市场缺乏信心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706002.md#1" target="_blank">【新闻看点】贸易谈判北京多变 川普：看情况</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1140447854-600x400-2-150x120.jpg" align ="left"></a>逼近12月15日的关税大限，中美双方变化的速度也加快了。中共国务院关税税则委员会今天（12月6日）公布 ，正在开展部分大豆、猪肉等商品的关税排除工作，示好的意味相当浓烈。美国总统川普昨天表示，美中贸易谈判进展“非常顺利”。对于是否在12月15日如期加征关税，“得看看情况”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706111.md#1" target="_blank">王立强：李源潮涉乐视网 中共窃美武器技术</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1c39f01121bf3ad005633263ade16339-150x120.jpg" align ="left"></a>出逃到澳大利亚的前中共间谍王立强在一份声明中说，中共军方利用香港关系企业搜集情报，窃取美国先进军事技术。他也透露，曾与其他人施压前中共国家副主席李源潮，并调查乐视网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 4:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank">2021年全球监控摄像头达10亿 过半在中国</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1166233093-150x120.jpg" align ="left"></a>一份新的报告显示，到2021年，全球将有数以10亿的摄像头在监视这个世界，其中一半以上位于中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705480.md#1" target="_blank">哈尔滨阿城区前政法委书记王云飞被举报</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705480.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2015-7-16-minghui-dc-rally-02-150x120.jpg" align ="left"></a>曾任黑龙江省哈尔滨市阿城区政法委书记的王云飞，在任职期间对当地法轮功学员遭受的一切迫害负有主要责任，现已被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707358.md#1" target="_blank">桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批</a><br></h3>中共驻瑞典大使桂从友周三（4日）在哥德堡大学参加活动时，宣称因瑞典早前颁奖给目前羁押在大陆的书商桂民海，中共在文化领域之外将再对瑞典实施贸易制裁。目前瑞典外交部还未收到中方正式制裁通知，有瑞典学者透露，瑞典已向欧盟发出反制中共请求。有评论人士认为，桂从友是中共粗鄙和“讹诈式外交”的代表。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:41 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706594.md#1" target="_blank">【翻墙必看】解体中共的大事件频发生</a><br></h3>近日，美国的中国问题专家、宾夕法尼亚大学教授林蔚（Arthur Waldron）在接受英文《大纪元时报》专访时披露，一个习近平身边的高层幕僚告知，中共内部承认正在走向解体。事实确实如此。目前，中共正面临有史以来最大的全面危机，解体中共的重大事件，正以高频率接连发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707197.md#1" target="_blank">河南许昌一高中女生从学校五楼跳下</a><br></h3>12月6日上午，河南许昌建安区三高发生一名女学生跳楼事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707059.md#1" target="_blank">兰州兽研所布鲁氏菌阳性人数增至96人</a><br></h3>目前，中国农业科学院兰州兽医研究所布鲁氏菌阳性人数已增至96人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706777.md#1" target="_blank">每日三退声明精选（2019/12/06）</a><br></h3>我是一位居住于四川的农民，曾经经历过土改，大跃进，等疯狂的红色运动，曾经被打为地富反坏右，被多人围殴，游街示众，后来虽然进行了平反，但多年内心一直过不了这个坎，总觉得又气又怕。今年是个多事之年，大事件的接连发生表明共产党体制的摇摇欲坠，希望在我有生之年能看见邪党倒台，感谢大纪元给了我一个吐露自己心声的机会，我在这里自愿宣布退出中国共产党的一切组织机构，三退保.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:53 PM							</td></tr>
