--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -38,7 +38,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708804.md#1" target="_blank">多伦多11月房价涨幅6.8% 2年来最高</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15209408-150x120.jpg" align ="left"></a>多伦多11月房价持续上涨，由于市场供应持续跟不上需求，目前涨势2017年以来最猛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank">越南海港的地道美味 令温哥华人心悦</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708149.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/040e559382ce43b249a3c2de45cab864-150x120.jpg" align ="left"></a>对于越南的美食略有了解的人都知道顺化牛肉粉、越南春卷、广南面、越南煎饼、烤肉饭，这些都是在越南的街头巷尾随处可见的巷弄美食。最近，这些美食出现在了温哥华Victoria Dr.上一家新开的越南餐厅：La Maison Da Nang。听这名字的Da Nang就知道是来自越南美丽的海港城市——岘港的美食。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank">美5岁男童出席收养仪式 全班同学到场祝贺</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_51021337_Subscription_L-150x120.jpg" align ="left"></a>美国密西根州一名5岁男童日前被一对夫妇正式收养。他在幼儿园的全班同学参加他的收养仪式，并向他表达支持与祝福之意，场面温馨感人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707606.md#1" target="_blank">每天10秒运动法 2周改善腰痛 还能增强腹肌</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/low-back-pain10-1207-150x120.jpg" align ="left"></a>很多人深受腰痛所苦，问题出在筋膜和肌肉上，譬如臀部筋膜过于僵硬紧绷，或腹肌太弱，影响腰部正常活动。运动伤害防护员、筋膜放松专家泷泽幸一建议腰痛者，每天练习10秒筋膜放松操 + 腹式呼吸，通常坚持二周左右可以改善腰痛，并增强腹肌。但他也补充，若是腰痛范围扩大或疼痛加剧，可能并非肌肉或筋膜问题，则必须尽早就医。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:48 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/11/n11714655.md#1" target="_blank">预测：2020年卑诗低陆平原房价料下降</a><br></h3>卑诗省政府机构说，低陆平原多数房主预计明年的房屋评估价会下降。卑诗评估局（BC Assessment）星期一（12月9日）预告了2020年的房屋评估价值，并表示，明年低陆平原独栋房屋价值，根据具体位置，可能下降5%至15%。温哥华和近郊（包括温哥华北岸、列治文、本拿比和三联市）的房价将出现最大跌幅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 9:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708076.md#1" target="_blank">汽车维修问与答：开暖气没有热风</a><br></h3>汽车维修问与答
 
 读者小袁问：您好，李师傅，我的车型号是2002年Toyota Camry，在做年检时修车师傅告知Engine Upper Right Stabilizer Mount Split，请问这个问题严重吗？谢谢。
